@@ -21,6 +21,7 @@ requires 'Class::Utils' => 0.02;
 requires 'Error::Pure' => 0.07;
 requires 'Exporter' => 0;
 requires 'HTML::Entities' => 0;
+requires 'List::Util' => 1.33;
 requires 'Readonly' => 0;
 requires 'perl' => '5.8.0';
 resources 'bugtracker' => 'https://github.com/michal-josef-spacek/Tags/issues';
